Add header, font & styles to the header & background

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/flip.js"></script>
     <title>Flip Frenzy</title>
 </head>
+<body>
+        <h1>Flip Frenzy</h1>
 
 
 
 
-
+</body>
 </html>
