Add score tracker & restart button to Index

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 </head>
 <body>
         <h1>Flip Frenzy</h1>
-
-
-
+        <div class="card-container"></div>
+        <p>Score: </p><span class="score"></span></p>
+        <div class="restartb">
+            <button onclick="restart()">Restart</button>
+        </div>
 
 </body>
 </html>
