Remove accidental duplicate P tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
         <h1>Flip Frenzy</h1>
         <div class="card-container"></div>
-        <p>Score: </p><span class="score"></span></p>
+        <p>Score: <span class="score"></span></p>
         <div class="restartb">
             <button onclick="restart()">Restart</button>
         </div>
