Change restart button & styles to remove overflow

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="card-container"></div>
         <p>Score: <span class="score"></span></p>
         <div class="restartb">
-            <button onclick="restart()">Restart</button>
+            <button id="restart-btn">Restart</button>
         </div>
         <script src="assets/js/flip.js"></script>
 </body>
