Change lines to fix syntax in JS/HTML/Json

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
         <h1>Flip Frenzy</h1>
-        <div class="card-container"></div>
+        <div id="card-container" class="card-container"></div>
         <p>Score: <span class="score"></span></p>
         <div class="restartb">
             <button id="restart-btn">Restart</button>
