Create Attempts display in HTML & JS

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>Flip Frenzy</h1>
         <div id="card-container" class="card-container"></div>
         <p>Score: <span class="score"></span></p>
+        <p>Attempts: <span class="Attempts"></span></p>
         <div class="restartb">
             <button id="restart-btn">Restart</button>
         </div>
