Change & style main elements for media query

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 <body>
         <h1>Flip Frenzy</h1>
         <div id="card-container" class="card-container"></div>
+        <div class="tracker">
         <p>Score: <span class="score"></span></p>
         <p>Attempts: <span class="Attempts"></span></p>
+        </div>
         <div class="restartb">
             <button id="restart-btn">Restart</button>
         </div>
