Create How To Play button, adjust styles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Flip Frenzy</title>
 </head>
 <body>
+        <button id="htp-button">How To Play</button>
         <h1>Flip Frenzy</h1>
         <div id="card-container" class="card-container"></div>
         <div class="tracker">
