Add How To Play accessibility with button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 <body>
         <button id="htp-button">How To Play</button>
         <h1>Flip Frenzy</h1>
+        <section id="howtoplay">
+            <h2>How to Play</h2>
+            <ol>
+            <li>Pick any card you want.</li>
+            <li>Pick another card to attempt to match them.</li>
+            <li>Now try to match all the cards!</li>
+            <li>Most importantly, have fun!</li>
+            </ol>
+        </section>
         <div id="card-container" class="card-container"></div>
         <div class="tracker">
         <p>Score: <span class="score"></span></p>
