--- a/index.html
+++ b/index.html
@@ -10,26 +10,34 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Flip Frenzy</title>
 </head>
+
 <body>
+    <header>
         <button id="htp-button">How To Play</button>
         <h1>Flip Frenzy</h1>
+    </header>
+
+    <main>
         <section id="howtoplay">
             <h2>How to Play</h2>
             <ol>
-            <li>Pick any card you want.</li>
-            <li>Pick another card to attempt to match them.</li>
-            <li>Now try to match all the cards!</li>
-            <li>Most importantly, have fun!</li>
+                <li>Pick any card you want.</li>
+                <li>Pick another card to attempt to match them.</li>
+                <li>Now try to match all the cards!</li>
+                <li>Most importantly, have fun!</li>
             </ol>
         </section>
+
         <div id="card-container" class="card-container"></div>
         <div class="tracker">
-        <p>Score: <span class="score"></span></p>
-        <p>Attempts: <span class="Attempts"></span></p>
+            <p>Score: <span class="score"></span></p>
+            <p>Attempts: <span class="Attempts"></span></p>
         </div>
         <div class="restartb">
             <button id="restart-btn">Restart</button>
@@ -37,7 +45,13 @@
         <div id="winner" class="hidden">
             <h2>Congratulations!</h2>
             <p>You've matched all the cards, please click restart if you would like to play again.</p>
-            </div>
+        </div>
+    </main>
+
+    <footer>
         <script src="assets/js/flip.js"></script>
+    </footer>
+
 </body>
+
 </html>
